--- a/int.html
+++ b/int.html
@@ -10,7 +10,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="./assets/img/favicon/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="./assets/img/favicon/favicon-16x16.png">
         <link rel="manifest" href="./assets/img/favicon/site.webmanifest">
-        <meta http-equiv='refresh' content='3; URL=main.php'>
+        <meta http-equiv='refresh' content='3; URL=main.html'>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link rel="stylesheet" type="text/css" href="./lib/style/index.css">
     </head>
